--- a/notebooks/prepare_input_data.ipynb
+++ b/notebooks/prepare_input_data.ipynb
@@ -6227,7 +6227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-ia-master",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6241,7 +6241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
