--- a/Practica.ipynb
+++ b/Practica.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\Carles\\anaconda3\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tools.data_functions import *\n",
     "from tools.model_factory import ConvBlockConfig, create_model_with_configurations\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +453,7 @@
        "[5544 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +498,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +623,7 @@
        "[3794 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +664,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +789,7 @@
        "[956 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +830,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +955,7 @@
        "[794 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +986,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1089,7 @@
        "<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None), TensorSpec(shape=(None, 12), dtype=tf.float32, name=None))>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1158,7 @@
        "<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None), TensorSpec(shape=(None, 12), dtype=tf.float32, name=None))>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1204,7 @@
        "<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None), TensorSpec(shape=(None,), dtype=tf.float64, name=None))>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1450,138 +1441,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_13\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " efficientnetb2 (Functional  (None, 7, 7, 1408)        7768569   \n",
-      " )                                                               \n",
+      " vgg16 (Functional)          (None, 7, 7, 512)         14714688  \n",
       "                                                                 \n",
-      " flatten_12 (Flatten)        (None, 68992)             0         \n",
+      " flatten_2 (Flatten)         (None, 25088)             0         \n",
       "                                                                 \n",
-      " dense_24 (Dense)            (None, 128)               8831104   \n",
+      " dense_4 (Dense)             (None, 128)               3211392   \n",
       "                                                                 \n",
-      " dense_25 (Dense)            (None, 12)                1548      \n",
+      " dense_5 (Dense)             (None, 12)                1548      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 16601221 (63.33 MB)\n",
-      "Trainable params: 8832652 (33.69 MB)\n",
-      "Non-trainable params: 7768569 (29.63 MB)\n",
+      "Total params: 17927628 (68.39 MB)\n",
+      "Trainable params: 3212940 (12.26 MB)\n",
+      "Non-trainable params: 14714688 (56.13 MB)\n",
       "_________________________________________________________________\n",
       "Epoch 1/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 10.4547 - accuracy: 0.0996\n",
-      "Epoch 1: val_loss improved from inf to 2.48057, saving model to models\\EfficientNetB2\n",
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32/32 [==============================] - 58s 2s/step - loss: 10.4547 - accuracy: 0.0996 - val_loss: 2.4806 - val_accuracy: 0.1370\n",
-      "Epoch 2/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 2.4849 - accuracy: 0.1162\n",
-      "Epoch 2: val_loss did not improve from 2.48057\n",
-      "32/32 [==============================] - 30s 948ms/step - loss: 2.4849 - accuracy: 0.1162 - val_loss: 2.4826 - val_accuracy: 0.1046\n",
-      "Epoch 3/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 2.4805 - accuracy: 0.1230\n",
-      "Epoch 3: val_loss improved from 2.48057 to 2.47894, saving model to models\\EfficientNetB2\n",
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32/32 [==============================] - 51s 2s/step - loss: 2.4805 - accuracy: 0.1230 - val_loss: 2.4789 - val_accuracy: 0.1370\n",
-      "Epoch 4/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 2.4770 - accuracy: 0.1446\n",
-      "Epoch 4: val_loss improved from 2.47894 to 2.47516, saving model to models\\EfficientNetB2\n",
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32/32 [==============================] - 51s 2s/step - loss: 2.4770 - accuracy: 0.1446 - val_loss: 2.4752 - val_accuracy: 0.1370\n",
-      "Epoch 5/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 2.4735 - accuracy: 0.1338\n",
-      "Epoch 5: val_loss improved from 2.47516 to 2.47138, saving model to models\\EfficientNetB2\n",
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32/32 [==============================] - 50s 2s/step - loss: 2.4735 - accuracy: 0.1338 - val_loss: 2.4714 - val_accuracy: 0.1370\n",
-      "Epoch 6/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 2.6135 - accuracy: 0.1445\n",
-      "Epoch 6: val_loss improved from 2.47138 to 2.46771, saving model to models\\EfficientNetB2\n",
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32/32 [==============================] - 50s 2s/step - loss: 2.6135 - accuracy: 0.1445 - val_loss: 2.4677 - val_accuracy: 0.1370\n",
-      "Epoch 7/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 2.4669 - accuracy: 0.1309\n",
-      "Epoch 7: val_loss improved from 2.46771 to 2.46438, saving model to models\\EfficientNetB2\n",
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: models\\EfficientNetB2\\assets\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32/32 [==============================] - 50s 2s/step - loss: 2.4669 - accuracy: 0.1309 - val_loss: 2.4644 - val_accuracy: 0.1370\n",
-      "Epoch 8/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 2.4653 - accuracy: 0.1337"
+      "32/32 [==============================] - ETA: 0s - loss: 2.5511 - accuracy: 0.2344"
      ]
     }
    ],
@@ -1595,14 +1473,14 @@
     "input_shape = (224, 224, 3)\n",
     "\n",
     "# Callbacks y guardado de grádicas\n",
-    "callbacks = get_callbacks(\"EfficientNetB2\")\n",
+    "callbacks = get_callbacks(\"b\")\n",
     "\n",
     "    \n",
     "# Cargar el modelo preentrenado de VGG16 sin incluir las capas densas (fully connected)\n",
-    "# base_model = VGG16(weights='imagenet', include_top=False, input_shape=input_shape)\n",
+    "base_model = VGG16(weights='imagenet', include_top=False, input_shape=input_shape)\n",
     "# base_model = Xception(weights='imagenet', include_top=False, input_shape=input_shape)\n",
     "# base_model = DenseNet121(weights='imagenet', include_top=False, input_shape=input_shape)\n",
-    "base_model = EfficientNetB2(weights='imagenet', include_top=False, input_shape=input_shape)\n",
+    "\n",
     "\n",
     "# Congelar las capas preentrenadas\n",
     "for layer in base_model.layers:\n",
