--- a/Practica.ipynb
+++ b/Practica.ipynb
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,262 @@
       "Non-trainable params: 14714688 (56.13 MB)\n",
       "_________________________________________________________________\n",
       "Epoch 1/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 2.5511 - accuracy: 0.2344"
+      "32/32 [==============================] - ETA: 0s - loss: 2.5511 - accuracy: 0.2344\n",
+      "Epoch 1: val_loss improved from inf to 2.16943, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 64s 2s/step - loss: 2.5511 - accuracy: 0.2344 - val_loss: 2.1694 - val_accuracy: 0.3274\n",
+      "Epoch 2/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 1.8637 - accuracy: 0.4297\n",
+      "Epoch 2: val_loss improved from 2.16943 to 1.52282, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 64s 2s/step - loss: 1.8637 - accuracy: 0.4297 - val_loss: 1.5228 - val_accuracy: 0.5324\n",
+      "Epoch 3/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 1.5981 - accuracy: 0.4678\n",
+      "Epoch 3: val_loss did not improve from 1.52282\n",
+      "32/32 [==============================] - 62s 2s/step - loss: 1.5981 - accuracy: 0.4678 - val_loss: 1.6076 - val_accuracy: 0.4749\n",
+      "Epoch 4/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 1.4445 - accuracy: 0.5119\n",
+      "Epoch 4: val_loss improved from 1.52282 to 1.37157, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 63s 2s/step - loss: 1.4445 - accuracy: 0.5119 - val_loss: 1.3716 - val_accuracy: 0.5262\n",
+      "Epoch 5/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 1.2830 - accuracy: 0.5957\n",
+      "Epoch 5: val_loss improved from 1.37157 to 1.15042, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 63s 2s/step - loss: 1.2830 - accuracy: 0.5957 - val_loss: 1.1504 - val_accuracy: 0.6130\n",
+      "Epoch 6/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 1.1449 - accuracy: 0.6035\n",
+      "Epoch 6: val_loss improved from 1.15042 to 1.14134, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 64s 2s/step - loss: 1.1449 - accuracy: 0.6035 - val_loss: 1.1413 - val_accuracy: 0.5962\n",
+      "Epoch 7/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 1.1421 - accuracy: 0.6250\n",
+      "Epoch 7: val_loss did not improve from 1.14134\n",
+      "32/32 [==============================] - 61s 2s/step - loss: 1.1421 - accuracy: 0.6250 - val_loss: 1.2292 - val_accuracy: 0.5732\n",
+      "Epoch 8/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 1.1184 - accuracy: 0.6406\n",
+      "Epoch 8: val_loss did not improve from 1.14134\n",
+      "32/32 [==============================] - 62s 2s/step - loss: 1.1184 - accuracy: 0.6406 - val_loss: 1.2409 - val_accuracy: 0.5711\n",
+      "Epoch 9/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 1.0224 - accuracy: 0.6562\n",
+      "Epoch 9: val_loss improved from 1.14134 to 1.04687, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 63s 2s/step - loss: 1.0224 - accuracy: 0.6562 - val_loss: 1.0469 - val_accuracy: 0.6381\n",
+      "Epoch 10/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.9971 - accuracy: 0.6709\n",
+      "Epoch 10: val_loss improved from 1.04687 to 0.99871, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 63s 2s/step - loss: 0.9971 - accuracy: 0.6709 - val_loss: 0.9987 - val_accuracy: 0.6778\n",
+      "Epoch 11/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.9434 - accuracy: 0.6904\n",
+      "Epoch 11: val_loss improved from 0.99871 to 0.98374, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 63s 2s/step - loss: 0.9434 - accuracy: 0.6904 - val_loss: 0.9837 - val_accuracy: 0.6831\n",
+      "Epoch 12/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.9549 - accuracy: 0.6782\n",
+      "Epoch 12: val_loss improved from 0.98374 to 0.90899, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 62s 2s/step - loss: 0.9549 - accuracy: 0.6782 - val_loss: 0.9090 - val_accuracy: 0.6946\n",
+      "Epoch 13/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.8953 - accuracy: 0.7002\n",
+      "Epoch 13: val_loss improved from 0.90899 to 0.89000, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 63s 2s/step - loss: 0.8953 - accuracy: 0.7002 - val_loss: 0.8900 - val_accuracy: 0.6946\n",
+      "Epoch 14/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.8453 - accuracy: 0.7178\n",
+      "Epoch 14: val_loss did not improve from 0.89000\n",
+      "32/32 [==============================] - 61s 2s/step - loss: 0.8453 - accuracy: 0.7178 - val_loss: 0.9231 - val_accuracy: 0.6705\n",
+      "Epoch 15/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.8310 - accuracy: 0.7139\n",
+      "Epoch 15: val_loss improved from 0.89000 to 0.84354, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 63s 2s/step - loss: 0.8310 - accuracy: 0.7139 - val_loss: 0.8435 - val_accuracy: 0.7238\n",
+      "Epoch 16/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.7797 - accuracy: 0.7549\n",
+      "Epoch 16: val_loss did not improve from 0.84354\n",
+      "32/32 [==============================] - 61s 2s/step - loss: 0.7797 - accuracy: 0.7549 - val_loss: 0.8907 - val_accuracy: 0.6967\n",
+      "Epoch 17/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.7504 - accuracy: 0.7568\n",
+      "Epoch 17: val_loss improved from 0.84354 to 0.78293, saving model to models\\b\n",
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models\\b\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 62s 2s/step - loss: 0.7504 - accuracy: 0.7568 - val_loss: 0.7829 - val_accuracy: 0.7249\n",
+      "Epoch 18/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.7331 - accuracy: 0.7598\n",
+      "Epoch 18: val_loss did not improve from 0.78293\n",
+      "32/32 [==============================] - 61s 2s/step - loss: 0.7331 - accuracy: 0.7598 - val_loss: 0.9476 - val_accuracy: 0.6935\n",
+      "Epoch 19/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.7750 - accuracy: 0.7515\n",
+      "Epoch 19: val_loss did not improve from 0.78293\n",
+      "32/32 [==============================] - 61s 2s/step - loss: 0.7750 - accuracy: 0.7515 - val_loss: 0.8754 - val_accuracy: 0.6998\n",
+      "Epoch 20/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.7121 - accuracy: 0.7686\n",
+      "Epoch 20: val_loss did not improve from 0.78293\n",
+      "32/32 [==============================] - 62s 2s/step - loss: 0.7121 - accuracy: 0.7686 - val_loss: 0.8318 - val_accuracy: 0.7218\n",
+      "Epoch 21/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.7254 - accuracy: 0.7549\n",
+      "Epoch 21: val_loss did not improve from 0.78293\n",
+      "32/32 [==============================] - 61s 2s/step - loss: 0.7254 - accuracy: 0.7549 - val_loss: 0.9753 - val_accuracy: 0.6653\n",
+      "Epoch 22/50\n",
+      "32/32 [==============================] - ETA: 0s - loss: 0.6785 - accuracy: 0.7773\n",
+      "Epoch 22: val_loss did not improve from 0.78293\n",
+      "32/32 [==============================] - 62s 2s/step - loss: 0.6785 - accuracy: 0.7773 - val_loss: 0.8283 - val_accuracy: 0.7197\n",
+      "Epoch 22: early stopping\n"
      ]
     }
    ],
@@ -1511,6 +1766,61 @@
     "    callbacks = callbacks\n",
     "    )\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.applications import VGG16, ResNet50, DenseNet121, Xception, EfficientNetB2\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Flatten\n",
+    "from tensorflow.keras.callbacks import EarlyStopping,ModelCheckpoint\n",
+    "\n",
+    "# Tamaño entrada\n",
+    "input_shape = (224, 224, 3)\n",
+    "\n",
+    "# Callbacks y guardado de grádicas\n",
+    "callbacks = get_callbacks(\"c\")\n",
+    "\n",
+    "    \n",
+    "# Cargar el modelo preentrenado de VGG16 sin incluir las capas densas (fully connected)\n",
+    "# base_model = VGG16(weights='imagenet', include_top=False, input_shape=input_shape)\n",
+    "# base_model = Xception(weights='imagenet', include_top=False, input_shape=input_shape)\n",
+    "base_model = DenseNet121(weights='imagenet', include_top=False, input_shape=input_shape)\n",
+    "\n",
+    "\n",
+    "# Congelar las capas preentrenadas\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# Crear un nuevo modelo Sequential\n",
+    "model = Sequential()\n",
+    "\n",
+    "# Agregar la base preentrenada de VGG16\n",
+    "model.add(base_model)\n",
+    "\n",
+    "# Añadir capas adicionales para la clasificación\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(128, activation='relu'))\n",
+    "model.add(Dense(12, activation='softmax'))  \n",
+    "\n",
+    "# Compilar el modelo\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Mostrar la arquitectura del modelo\n",
+    "model.summary()\n",
+    "\n",
+    "history = model.fit(\n",
+    "    train_tfdataset.repeat(),\n",
+    "    steps_per_epoch = 32,\n",
+    "    epochs = 50,  # Ajustar según tus necesidades\n",
+    "    validation_data = valid_tfdataset,\n",
+    "    callbacks = callbacks\n",
+    "    )\n",
+    "    "
    ]
   },
   {
